--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -1,5 +1,6 @@
-.container.testimonials__containter {
+.container.testimonials__container {
     width: 40%;
+    padding-bottom: 4rem;
 }
 
 .client__avatar {
@@ -27,6 +28,10 @@
     width: 80%;
     margin: 0.8rem auto 0;
     height: 150px;
+}
+
+.swiper-pagination-clickable .swiper-pagination-bullet {
+    background: var(--color-primary);
 }
 
 /*============ Media Queries (med)=========*/
