--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -58,3 +58,21 @@ input, textarea {
     resize: none;
     color: var(--color-primary-light);
 }
+
+
+/* ========================= Media Queries (med) =========== */
+
+@media screen and (max-width: 1024px) {
+    .container.contact__container {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+}
+
+/* ========================= Media Queries (sm) =========== */
+
+@media screen and (max-width: 600px) {
+    .container.contact__container {
+        width: var(--container-width-sm);
+    }
+}
