--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -6,6 +6,7 @@
 
 .about__me {
     width: 400px;
+    height: 275px;
     aspect-ratio: 1/1;
     border-radius: 2rem;
     background: linear-gradient(45deg, transparent, var(--color-primary), transparent);
@@ -19,7 +20,7 @@
 
 .about__me-image {
     width: auto;
-    height: 100%;
+    height: auto;
     border-radius: 2rem;
         -webkit-border-radius: 2rem;
         -moz-border-radius: 2rem;
