--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,17 +1,17 @@
 nav {
     background: rgba(0, 0, 0, 0.3);
     width: max-content;
-    display: block;
-    padding: 0.7rem 1.7rem;
+    display: flex;
+    flex-direction: column;
+    padding: 1.7rem 1.7rem;
     z-index: 2;
     position: fixed;
-    left: 25%;
     transform: translateX(-50%);
     -webkit-transform: translateX(-50%);
     -moz-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     -o-transform: translateX(-50%);
-    top: 2rem;
+    top: 6rem;
     left: 10rem;
     display: flex;
     gap: 0.8rem;
@@ -31,7 +31,7 @@ nav a {
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
     display: flex;
-    color: var(--color-light);
+    color: var(--color-primary);
     font-size: 1.1rem;
 }
 
