--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,10 +32,10 @@ header {
     right: 10rem;
     top: 5rem;
     background: rgba(0, 0, 0, 0.3);
-    padding: 0.7rem 1.7rem;
+    padding: 1.7rem 1.7rem;
     z-index: 2;
     backdrop-filter: blur(15px); 
-    border-radius: 25px;
+    border-radius: 3rem;
 }
 
 .header_socials::after {
@@ -49,11 +49,11 @@ header {
 
 .me, .me > img{
     background-color: var(--color-bg-primary);
-    width: 38rem;
-    height: 50rem;
+    width: 25rem;
+    height: 30rem;
     position: absolute;
     left: 50%;
-    top: 20px;
+    top: 6rem;
     transform: translateX(-50%);
     -webkit-transform: translateX(-50%);
     -moz-transform: translateX(-50%);
@@ -83,9 +83,9 @@ header {
     font-weight: 300;
     font-size: .9rem;    
     background: rgba(0, 0, 0, 0.3);
-    padding: 0.7rem 1.7rem;
+    padding: 1.7rem 1.7rem;
     z-index: 2;
-    border-radius: 25px;
+    border-radius: 3rem;
     backdrop-filter: blur(15px); 
     color: var(--color-primary);
     
