fixed responsive css on nav and header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -97,6 +97,11 @@ header {
     header {
         height: 100vh;
     }
+
+    .header_socials, .scroll_down {
+        padding: 0.4rem 0.4rem;
+    }
+
    
 
 }
