--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -29,7 +29,7 @@ header {
     align-items: center;
     gap: 0.8rem;
     position: fixed;
-    right: 10rem;
+    right: 9rem;
     top: 5rem;
     background: rgba(0, 0, 0, 0.3);
     padding: 1.7rem 1.7rem;
@@ -73,8 +73,8 @@ header {
 
 .scroll_down {
     position: fixed;
-    right: 8rem;
-    top: 20rem;
+    right: 7rem;
+    top: 17rem;
     transform: rotate(90deg);
         -webkit-transform: rotate(90deg);
         -moz-transform: rotate(90deg);
@@ -84,6 +84,7 @@ header {
     font-size: .9rem;    
     background: rgba(0, 0, 0, 0.3);
     padding: 1.7rem 1.7rem;
+    gap: 0.8rem;
     z-index: 2;
     border-radius: 3rem;
     backdrop-filter: blur(15px); 
