--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -36,6 +36,7 @@ header {
     z-index: 2;
     backdrop-filter: blur(15px); 
     border-radius: 3rem;
+    width: max-content;
 }
 
 .header_socials::after {
