--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -50,6 +50,10 @@ img {
     margin-bottom: 1rem;
 }
 
+.portfolio__item p {
+    padding-bottom: 2rem;
+}
+
 /************* Media Queries (Med) ***************/
 @media screen and (max-width: 1024px) {
     .portfolio__container {
