--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -35,7 +35,7 @@
         -moz-border-radius: 0 0 2rem 2rem;
         -ms-border-radius: 0 0 2rem 2rem;
         -o-border-radius: 0 0 2rem 2rem;
-    box-shadow: 0 2rem 1rem rgba[0, 0, 0, 0.1];    
+    box-shadow: 0 2rem 1rem #002;    
 }
 
 .service__head > h3 {
