--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,7 +1,3 @@
-* {
-    /*padding-top: 15rem;*/
-}
-
 .about__container {
     display: grid;
     grid-template-columns: 35% 50%;
@@ -136,7 +132,11 @@
         display: none;
     }
 
-    .about__cards {
+    .about__container {
+        margin-right: 0px;
+    }
+
+    .about__card {
         grid-template-columns: 1fr 1fr;
         gap: 1rem;
     }
